openssl-sys/tongsuo/include/openssl/x509.h

typedef STACK_OF(X509_ALGOR) X509_ALGORS;
typedef struct X509_name_entry_st X509_NAME_ENTRY;
typedef struct X509_extension_st X509_EXTENSION;
typedef STACK_OF(X509_EXTENSION) X509_EXTENSIONS;
typedef struct X509_req_st X509_REQ;
const char *X509_verify_cert_error_string(long n);
int X509_sign(X509 *x, EVP_PKEY *pkey, const EVP_MD *md);
int X509_REQ_sign(X509_REQ *x, EVP_PKEY *pkey, const EVP_MD *md);
int X509_digest(const X509 *data, const EVP_MD *type,
                unsigned char *md, unsigned int *len);
int i2d_X509_bio(BIO *bp, X509 *x509);
int i2d_X509_REQ_bio(BIO *bp, X509_REQ *req);
int i2d_PUBKEY_bio(BIO *bp, EVP_PKEY *pkey);
ASN1_TIME *X509_gmtime_adj(ASN1_TIME *s, long adj);
X509_REQ *X509_to_X509_REQ(X509 *x, EVP_PKEY *pkey, const EVP_MD *md);
int i2d_RSA_PUBKEY(RSA *a, unsigned char **pp);
RSA *d2i_RSA_PUBKEY(RSA **a, const unsigned char **pp, long length);
int X509_set_version(X509 *x, long version);
ASN1_INTEGER *X509_get_serialNumber(X509 *x);
int X509_set_issuer_name(X509 *x, X509_NAME *name);
int X509_set_pubkey(X509 *x, EVP_PKEY *pkey);
EVP_PKEY *X509_get_pubkey(X509 *x);
int X509_REQ_add_extensions(X509_REQ *req, STACK_OF(X509_EXTENSION) *exts);
/*
 * NOTE: you should be passing -1, not 0 as lastpos. The functions that use
 * lastpos, search after that position on.
 */
int X509_NAME_get_index_by_NID(X509_NAME *name, int nid, int lastpos);
int X509_NAME_add_entry_by_txt(X509_NAME *name, const char *field, int type,
                               const unsigned char *bytes, int len, int loc,
                               int set);
int X509_add_ext(X509 *x, X509_EXTENSION *ex, int loc);